--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
       "version": "0.1.0",
       "private": true,
       "dependencies": {
+          "express": "^4.19.2",
+          "cors": "^2.8.5",
+          "body-parser": "^1.20.2",
+          "mysql2": "^3.11.0",
+          "bcryptjs": "^2.4.3",
+          "jsonwebtoken": "^9.0.2",
           "@radix-ui/react-accordion": "^1.2.3",
           "@radix-ui/react-alert-dialog": "^1.1.6",
           "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -54,6 +60,8 @@
       },
       "scripts": {
           "dev": "vite",
-          "build": "vite build"
+          "build": "vite build",
+          "server": "node backend/server.js",
+          "db:init": "node -e \"require('./backend/db').initDb().then(()=>console.log('DB ready')).catch(e=>{console.error(e);process.exit(1)})\""
       }
   }
